[gd_scene load_steps=30 format=3 uid="uid://dxot07570easj"]

[ext_resource type="Script" path="res://Scripts/Hound/hound.gd" id="1_7jxjq"]
[ext_resource type="Script" path="res://Scripts/Hound/hound_manager.gd" id="2_tix3e"]
[ext_resource type="Texture2D" uid="uid://c8ta3q0spmik4" path="res://Assets/demon-hound/spritesheets/1x/demon-hound-master.png" id="3_ginwp"]
[ext_resource type="Shader" path="res://Scripts/hitflash.gdshader" id="3_scp6o"]
[ext_resource type="PackedScene" uid="uid://b1mj2rau38rmd" path="res://Scenes/Hurtbox.tscn" id="3_wwpnp"]
[ext_resource type="PackedScene" uid="uid://unbq8lw5lfc4" path="res://Scenes/Hitbox.tscn" id="4_cfk5l"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="5_ggijc"]
[ext_resource type="PackedScene" uid="uid://b4nt8ferk20x7" path="res://Scenes/Detectbox.tscn" id="5_hbse2"]
[ext_resource type="Script" path="res://Scripts/Hound/idle.gd" id="6_tkmgq"]
[ext_resource type="Script" path="res://Scripts/Hound/move.gd" id="7_7furg"]
[ext_resource type="Script" path="res://Scripts/Hound/attack.gd" id="10_5vgqu"]
[ext_resource type="Script" path="res://Scripts/Hound/death.gd" id="12_jl4x3"]
[ext_resource type="Script" path="res://Scripts/Hound/final.gd" id="12_nxxb3"]
[ext_resource type="AudioStream" uid="uid://brw7kk7hk00x7" path="res://Assets/sounds/hound/hound_bite.wav" id="16_bor5d"]
[ext_resource type="AudioStream" uid="uid://bd87l5ggsn33k" path="res://Assets/sounds/hound/hound_death.mp3" id="16_l7by5"]
[ext_resource type="AudioStream" uid="uid://cp8figpvhft0b" path="res://Assets/sounds/hound_walking.wav" id="18_e0fmj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5phh7"]
shader = ExtResource("3_scp6o")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="Animation" id="Animation_3ghfq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, -5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Detectbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("body:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("audio/bite:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("audio/death:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("audio/walking:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nf0ja"]
resource_name = "attack"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(18, -5), Vector2(15, -4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("audio/bite:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hyap4"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kvp7q"]
resource_name = "death_knockback"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Detectbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("audio/death:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_moael"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_qlob1"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio/walking:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jjvf1"]
_data = {
"RESET": SubResource("Animation_3ghfq"),
"attack": SubResource("Animation_nf0ja"),
"death": SubResource("Animation_hyap4"),
"death_knockback": SubResource("Animation_kvp7q"),
"idle": SubResource("Animation_moael"),
"run": SubResource("Animation_qlob1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8kjcl"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ivxk8"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n20t6"]
radius = 4.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dkxjd"]
size = Vector2(108, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lkml"]
size = Vector2(38, 26)

[node name="Hound" type="CharacterBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 7
script = ExtResource("1_7jxjq")

[node name="hound_manager" type="Node" parent="."]
script = ExtResource("2_tix3e")

[node name="sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5phh7")
position = Vector2(0, -25)
texture = ExtResource("3_ginwp")
hframes = 23

[node name="animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jjvf1")
}

[node name="body" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8kjcl")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("3_wwpnp")]
collision_layer = 0
collision_mask = 72
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_ivxk8")

[node name="Hitbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("4_cfk5l")]
collision_layer = 4
collision_mask = 2
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(15, -5)
shape = SubResource("CapsuleShape2D_n20t6")
disabled = true

[node name="Detectbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("5_hbse2")]
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Detectbox" index="0"]
position = Vector2(54, -6)
shape = SubResource("RectangleShape2D_dkxjd")

[node name="AttackBox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("5_hbse2")]
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="AttackBox" index="0"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_2lkml")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("5_ggijc")
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("move_state", "attack_state", "death_state")]
script = ExtResource("6_tkmgq")
move_state = NodePath("../move")
attack_state = NodePath("../attack")
death_state = NodePath("../death")
animation_name = "idle"

[node name="move" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "attack_state", "death_state")]
script = ExtResource("7_7furg")
idle_state = NodePath("../idle")
attack_state = NodePath("../attack")
death_state = NodePath("../death")
animation_name = "run"
move_speed = 50.0

[node name="attack" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state", "attack_state", "death_state")]
script = ExtResource("10_5vgqu")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
attack_state = NodePath(".")
death_state = NodePath("../death")
animation_name = "attack"

[node name="death" type="Node" parent="state_machine" node_paths=PackedStringArray("final_state")]
script = ExtResource("12_jl4x3")
final_state = NodePath("../final")
animation_name = "death_knockback"

[node name="final" type="Node" parent="state_machine"]
script = ExtResource("12_nxxb3")
animation_name = "death"

[node name="audio" type="Node" parent="."]

[node name="hurt" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("16_l7by5")
volume_db = -10.0

[node name="walking" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("18_e0fmj")
volume_db = -10.0

[node name="death" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("16_l7by5")
volume_db = -10.0

[node name="bite" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("16_bor5d")
volume_db = -10.0

[connection signal="animation_finished" from="animations" to="state_machine/attack" method="_on_animations_animation_finished"]
[connection signal="animation_finished" from="animations" to="state_machine/final" method="_on_animations_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="hound_manager" method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="hound_manager" method="_on_hurtbox_area_exited"]
[connection signal="area_entered" from="Detectbox" to="state_machine/idle" method="_on_detectbox_area_entered"]
[connection signal="area_exited" from="Detectbox" to="state_machine/attack" method="_on_detectbox_area_exited"]
[connection signal="area_entered" from="AttackBox" to="state_machine/idle" method="_on_attack_box_area_entered"]
[connection signal="area_entered" from="AttackBox" to="state_machine/move" method="_on_attack_box_area_entered"]
[connection signal="area_exited" from="AttackBox" to="state_machine/attack" method="_on_attack_box_area_exited"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="Detectbox"]
[editable path="AttackBox"]
